--- a/class_pratice.ipynb
+++ b/class_pratice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnCNIqBmiUWYuEF9og9RD5",
+      "authorship_tag": "ABX9TyNlDzXt6T7LYsrLmo4TrnhP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,23 +56,118 @@
         "print(my_car.color)"
       ],
       "metadata": {
+        "id": "9e5YPp3qY1Ku"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🧠 Basic Level: Class and Object Creation\n",
+        "✅ Create a class Car with attributes brand, model, and year. Write a method display_info() that prints the car details.\n",
+        "\n",
+        "✅ Create a class Student with attributes name, roll_no, and grade. Write a method display() to show student info.\n",
+        "\n",
+        "✅ Define a class Rectangle with attributes length and width. Add methods:\n",
+        "\n",
+        "area() to return the area.\n",
+        "\n",
+        "perimeter() to return the perimeter.\n",
+        "\n",
+        "✅ Create a class Circle with radius as attribute. Include:\n",
+        "\n",
+        "Method to calculate area.\n",
+        "\n",
+        "Method to calculate circumference.\n",
+        "\n",
+        "✅ Create a class BankAccount with attributes account_holder, balance. Add methods:\n",
+        "\n",
+        "deposit(amount)\n",
+        "\n",
+        "withdraw(amount)\n",
+        "\n",
+        "display_balance()"
+      ],
+      "metadata": {
+        "id": "2kdr0C3scvVG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student():\n",
+        "  def __init__(self,name,roll_no,grade):\n",
+        "    self.name=name\n",
+        "    self.roll_no=roll_no\n",
+        "    self.grade=grade\n",
+        "\n",
+        "\n",
+        "  def info(self):\n",
+        "    print( f\"Student Name: {self.name}\")\n",
+        "    print(f\"Student Roll_no: {self.roll_no}\")\n",
+        "    print(f\"Student Grade: {self.grade}\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "My_info=Student(\"Manju\",25,\"A+\")\n",
+        "My_info.info()"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "9e5YPp3qY1Ku",
-        "outputId": "7c5ec1f9-d569-4334-8684-df4d9f5d4db9"
+        "id": "weC2nzANc9To",
+        "outputId": "0e0c2a84-b203-466a-d4af-2c7b6a07344f"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "My Car Brand is audi and model is a4 and it's color is just wow black\n",
-            "Tank is full\n",
-            "a4\n",
-            "audi\n",
-            "black\n"
+            "Student Name: Manju\n",
+            "Student Roll_no: 25\n",
+            "Student Grade: A+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangle():\n",
+        "  def __init__(self,length,width):\n",
+        "    self.length=length\n",
+        "    self.width=width\n",
+        "\n",
+        "  def area(self):\n",
+        "    return self.length*self.width\n",
+        "\n",
+        "  def perimeter(self):\n",
+        "    return 2*(self.length+self.width)\n",
+        "\n",
+        "\n",
+        "\n",
+        "rec=Rectangle(10,20)\n",
+        "print(\"Area of Rectangle : \",rec.area())\n",
+        "print(\"Perimeter of Rectangle : \",rec.perimeter())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UFF6ElndezvC",
+        "outputId": "86eb239c-d3a8-4bbf-8d88-7e56d518c9e3"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Area of Rectangle :  200\n",
+            "Perimeter of Rectangle :  60\n"
           ]
         }
       ]
