--- a/class_pratice.ipynb
+++ b/class_pratice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlDzXt6T7LYsrLmo4TrnhP",
+      "authorship_tag": "ABX9TyNS0YJ78P2SvnFEW3LFFaMG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,6 +168,61 @@
           "text": [
             "Area of Rectangle :  200\n",
             "Perimeter of Rectangle :  60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Bank:\n",
+        "    def __init__(self, account_holder, balance):\n",
+        "        self.account_holder = account_holder\n",
+        "        self.balance = balance\n",
+        "\n",
+        "    def deposit(self, amount):\n",
+        "        if amount > 0:\n",
+        "            self.balance += amount\n",
+        "            print(f\"Deposited ₹{amount}\")\n",
+        "            print(f'Total Balance {self.balance}')\n",
+        "        else:\n",
+        "            print(\"Invalid deposit amount.\")\n",
+        "\n",
+        "    def withdraw(self, amount):\n",
+        "        if amount > 0 and amount <= self.balance:\n",
+        "            self.balance -= amount\n",
+        "            print(f\"Withdrawn ₹{amount}\")\n",
+        "        else:\n",
+        "            print(\"Invalid withdrawal amount or insufficient balance.\")\n",
+        "\n",
+        "    def show_balance(self):\n",
+        "        print(f\"Available Balance: ₹{self.balance}\")\n",
+        "\n",
+        "\n",
+        "bk = Bank(\"Manju\", 250000)\n",
+        "bk.deposit(11000)\n",
+        "print(\" \")\n",
+        "bk.withdraw(5000)\n",
+        "bk.show_balance()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UgYKm27sfmjx",
+        "outputId": "4226b590-bf78-4bb4-f4cc-2f3ed6c1d3e9"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Deposited ₹11000\n",
+            "Total Balance 261000\n",
+            " \n",
+            "Withdrawn ₹5000\n",
+            "Available Balance: ₹256000\n"
           ]
         }
       ]
